Test First Commit

--- a/05-Guess-My-Number/starter/index.html
+++ b/05-Guess-My-Number/starter/index.html
@@ -25,6 +25,9 @@
         <p class="label-highscore">
           🥇 Highscore: <span class="highscore">0</span>
         </p>
+        <p class="test">
+          Test test
+        </p>
       </section>
     </main>
     <script src="script.js"></script>
